Flickering on loading screen issue fix

--- a/src/app/shared/components/loader/loader.component.scss
+++ b/src/app/shared/components/loader/loader.component.scss
@@ -5,7 +5,7 @@
     max-height: 100%; 
     opacity: .5; 
     background-color: white; 
-    position: absolute; 
+    position: fixed; 
     z-index: 1;
     overflow: hidden;
     display: flex;
